syntax = "proto3";

package account;
import "google/protobuf/struct.proto";

option go_package=  "./pb";

/**
 export PATH="$PATH:$(go env GOPATH)/bin"
 protoc --go_out=../ --go-grpc_out=../ account.proto
**/

// Common response after adding data
message AddResponse{
    string id           = 1;
    string created_at   = 2;
}

// Common response after updating data
message UpdateResponse{
    string id           = 1;
    string updated_at   = 2;
}

message DeletedResponse{
    string id           = 1;
    string deleted_at   = 2;
}

// Pagination messages
message PaginationRequest {
    int32 page = 1;
    int32 limit = 2;
  }
  
  message PaginationResponse {
    int32 page = 1;
    int32 limit = 2;
    int32 total = 3;
  }

// Message representing an Franchise in the system
message FranchiseInput {
    string business_name                    = 1;
    string logo_url                         = 2;
    string subdomain                        = 3;
    google.protobuf.Struct theme_settings   = 4;
    string status                           = 5;
    string franchise_owner_id               = 6;

}

// Message representing Franchise document in the system
message FranchiseDocumentInput {
    string doc_name         = 1;
    string doc_desc         = 2;
    bool is_mandate         = 3;
    string document_url     = 4;
    string uploaded_by      = 5; // -- FK to outlet.owner or outlet.team_accounts
    string status           = 6;
    string remarks          = 7;
}

// Message representing an Franchise address in the system
message FranchiseAddressInput {
    string address_line = 1;
    string city         = 2;
    string state        = 3;
    string country      = 4;
    string pincode      = 5;
    string latitude     = 6;
    string longitude    = 7;
}

// Message representing an Franchise owner in the system
message FranchiseOwnerInput {
    string name             = 1;
    string gender           = 2;
    string dob              = 3;
    string mobile_no        = 4;
    string email            = 5;
    string address          = 6;
    string aadhar_no        = 7;
    bool   is_verified      = 8;
    string status           = 9;
}

message FranchiseByIDInput {
    string id                           = 1;
    FranchiseInput franchise_details    = 2;
    string created_at                   = 3;
    string updated_at                   = 4; 
}

// Message representing an Account in the system
message AccountInput {
    string emp_id       = 1;
    string login_id     = 2;
    string account_type = 3;
    string name         = 4;
    string mobile_no    = 5;
    string email_id     = 6;
    string status       = 7;
}

// POST /franchise/create -> Request

message AddFranchiseRequest {
    FranchiseInput franchise_details    = 1;
}

message UpdateFranchiseRequest {
    string id                           = 1;
    FranchiseInput franchise_details    = 2;
}

message UpdateFranchiseStatusRequest{
    string id       = 1;
    string status   = 2;
}

// -> Response
message AddFranchiseResponse {
    string id           = 1;
    string created_at   = 2;
}

// DELETE
message DeleteFranchiseRequest {
    string id       = 1;
    string admin_id = 2;
}

message AddFranchiseDocumentRequest {
    string franchise_id             = 1;
    FranchiseDocumentInput f_doc    = 2;
}

message UpdateFranchiseDocumentRequest {
    string id                       = 1;
    string franchise_id             = 2;
    FranchiseDocumentInput f_doc    = 3;
}

// DELETE
message DeleteFranchiseDocumentRequest {
    string id           = 1;
    string franchise_id = 2;
}

message AddFranchiseAddressRequest {
    string franchise_id             = 1;
    FranchiseAddressInput address   = 2;
}

message UpdateFranchiseAddressRequest {
    string id                       = 1;
    string franchise_id             = 2;
    FranchiseAddressInput address   = 3;
}

message AddFranchiseOwnerRequest{
    FranchiseOwnerInput owner   = 1;
}

message UpdateFranchiseOwnerRequest{
    string id                   = 1;
    string franchise_id         = 2;
    FranchiseOwnerInput owner   = 3;
}

// POST
message AddFranchiseAccountRequest {
    string franchise_id         = 1;
    AccountInput account        = 2;
    string role_id              = 3;
}

// PUT
message UpdateFranchiseAccountRequest {
    string id                   = 1;
    string franchise_id         = 2;
    AccountInput account        = 3;
    string role_id              = 4;
}

// DELETE
message DeleteFranchiseAccountRequest {
    string id                   = 1;
    string franchise_id         = 2;
}

// GET
message GetFranchiseByIDRequest {
    string id = 1;
}

//-> Response
message GetFranchiseByIDResponse {
    string id                       = 1;
    FranchiseByIDInput franchise    = 2;
    string created_at               = 3;
    string updated_at               = 4; 
}

message GetFranchiseCompleteDetailsRequest {
    string id = 1;
}

//-> Response
message GetFranchiseCompleteDetailsResponse {
    string id                                   = 1;
    FranchiseByIDInput franchise                = 2;
    FranchiseOwnerInput f_owner                 = 3;
    repeated FranchiseAddressInput f_address    = 4;
    repeated FranchiseDocumentInput f_doc       = 5;
    repeated AccountInput f_accounts            = 6;
}

//GET /franchises?skip0&take=100
message GetFranchisesRequest {
    PaginationRequest pagination = 1;
    string query                 = 2;
}

//-> Response
message GetFranchisesResponse {
    repeated FranchiseByIDInput franchises = 1;
    PaginationResponse pagination = 2;
}

message GetFranchiseDocumentRequest {
    string id                       = 1;
    string franchise_id             = 2;
}

message GetFranchiseDocumentResponse {
    string id                       = 1;
    string franchise_id             = 2;
    FranchiseDocumentInput f_doc    = 3;
    string created_at               = 4;
    string updated_at               = 5; 
}

message GetFranchiseOwnerRequest {
    string id                       = 1;
    string franchise_id             = 2;
}

message GetFranchiseOwnerResponse {
    string id                       = 1;
    string franchise_id             = 2;
    FranchiseOwnerInput f_owner     = 3;
    string created_at               = 4;
    string updated_at               = 5; 
}

message GetFranchiseAddressRequest {
    string id                       = 1;
    string franchise_id             = 2;
}

message GetFranchiseAddressResponse {
    string id                       = 1;
    string franchise_id             = 2;
    FranchiseAddressInput f_address = 3;
    string created_at               = 4;
    string updated_at               = 5; 
}

//GET
message GetFranchiseAccountByIDRequest {
    string account_id           = 1;
    string franchise_id         = 2;
}

//-> Response
message GetFranchiseAccountByIDResponse {
    string id                   = 1;
    string franchise_id         = 2;
    AccountInput accounts       = 3;
    string created_at           = 4;
    string updated_at           = 5; 
}

//GET
message GetFranchiseAccountsRequest {
    string franchise_id = 1;
    PaginationRequest pagination = 2;
}

//-> Response
message GetFranchiseAccountsResponse {
    repeated AccountInput accounts = 1;
    PaginationResponse pagination = 2;
}

service AccountService {
    rpc CreateFranchise(AddFranchiseRequest)    returns (AddResponse);
    rpc UpdateFranchise(UpdateFranchiseRequest) returns (UpdateResponse);
    rpc UpdateFranchiseStatus(UpdateFranchiseStatusRequest) returns (UpdateResponse);
    rpc DeleteFranchise(DeleteFranchiseRequest) returns(DeletedResponse);
    rpc GetAllFranchises(GetFranchisesRequest) returns(GetFranchisesResponse);
    rpc GetFranchiseByID(GetFranchiseByIDRequest) returns(GetFranchiseByIDResponse);

    rpc CreateFranchiseDocument(AddFranchiseDocumentRequest) returns (AddResponse);
    rpc GetFranchiseDocumentByID(GetFranchiseDocumentRequest) returns(GetFranchiseDocumentResponse);
    rpc UpdateFranchiseDocumentByID(UpdateFranchiseDocumentRequest) returns(UpdateResponse);
    rpc DeleteFranchiseDocumentByID(DeleteFranchiseDocumentRequest) returns(DeletedResponse);
   
    rpc CreateFranchiseAddress(AddFranchiseAddressRequest) returns (AddResponse);
    rpc GetFranchiseAddressByID(GetFranchiseAddressRequest) returns (GetFranchiseAddressResponse);
    rpc UpdateFranchiseAddressByID(UpdateFranchiseAddressRequest) returns (UpdateResponse);


    rpc CreateFranchiseOwner(AddFranchiseOwnerRequest) returns (AddResponse);
    rpc UpdateFranchiseOwnerByID(UpdateFranchiseOwnerRequest) returns (UpdateResponse);
    rpc GetFranchiseOwnerByID(GetFranchiseOwnerRequest) returns (GetFranchiseOwnerResponse);

    rpc CreateFranchiseAccount(AddFranchiseAccountRequest) returns (AddResponse);
    rpc GetFranchiseAccountByID(GetFranchiseAccountByIDRequest) returns (GetFranchiseAccountByIDResponse);
    rpc GetFranchiseAccounts(GetFranchiseAccountsRequest) returns (GetFranchiseAccountsResponse);
    rpc UpdateFranchiseAccountByID(UpdateFranchiseAccountRequest) returns (UpdateResponse);
    rpc DeleteFranchiseAccountByID(DeleteFranchiseAccountRequest) returns (DeletedResponse);
}